# ismip-indexing

./: .gitignore  .sops.yaml  CLOUD_SETUP.md  Dockerfile.lithops  ICECHUNK_STORE.md  README.md  generate_html_site.py  ismip6-viewer.mjs  lithops.yaml  lithops_aws.yaml  lithops_local.yaml  normalize_time_existing_store.py  pyproject.toml  rechunk_existing_store.py  requirements-lithops.txt  requirements.txt  skip_list.txt  virtualize_with_coiled.py  virtualize_with_lithops.py  virtualize_with_lithops_combine_variables.py
.github/encrypted/: aws-credentials.enc.env  aws-credentials.enc.env.example
.github/workflows/: deploy-pages.yml  test.yml
_extensions/ismip6-viewer/: ismip6-viewer.lua
binder/: requirements.txt
docs/: embedding.md
ingest_validation/: test_load.ipynb
ismip6_helper/: __init__.py  grid_utils.py  ignore_value.py  index.py  merge_virtual.py  rechunk_virtual.py  time_utils.py  variable_classification.py
ismip_data_index_website/: generate_html_site.py  serve_site.py
js-viewer/: package-lock.json  package.json  vite.config.ts
notebooks/: dev.ipynb  open_icechunk.ipynb  open_icechunk_combined_vars.ipynb  open_icechunk_local.ipynb  working_with_ismip6_examples.ipynb
tests/: test_config.py  test_integration.py  test_merge_virtual.py  test_netcdf3_bypass.py
virtualize_ismip6/: CLOUD_SETUP.md  ICECHUNK_STORE.md  compare_local_remote_store.py  lithops_aws.md  lithops_local.yaml  normalize_time_existing_store.py  rechunk_existing_store.py  skip_list.txt  virtualize_with_lithops.py  virtualize_with_lithops_combine_variables.py
(+15 files in other folders)
